--- a/src/app/public/components/bookmark-form/bookmark-form.component.html
+++ b/src/app/public/components/bookmark-form/bookmark-form.component.html
@@ -1,67 +1,130 @@
-<form class="w-full max-w-lg">
-  <div class="flex flex-wrap -mx-3 mb-6">
-    <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-      <label
-        class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-        for="grid-title"
-      >
-        Title
-      </label>
-      <input
-        class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-        id="grid-title"
-        type="text"
-        placeholder="Javascript tutorial"
-      />
-    </div>
-    <div class="w-full md:w-1/2 px-3">
-      <label
-        class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-        for="grid-url"
-      >
-        URL
-      </label>
-      <input
-        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-        id="grid-url"
-        type="text"
-        placeholder="www.xyz.com"
-      />
+<form
+  class="w-full max-w-lg flex flex-col gap-6 items-center justify-evenly"
+  [formGroup]="bookmarkForm"
+  (ngSubmit)="onSubmit()"
+>
+  <!-- Title Input -->
+  <div class="w-full px-3 mb-6 md:mb-0">
+    <label
+      class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+      for="title"
+    >
+      Title
+    </label>
+    <input
+      formControlName="title"
+      required
+      class="form-control appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+      id="title"
+      type="text"
+      placeholder="Javascript tutorial"
+    />
+    <div
+      *ngIf="
+        bookmarkForm.get('title')?.invalid &&
+        (bookmarkForm.get('title')?.dirty || bookmarkForm.get('title')?.touched)
+      "
+      class="text-red-500"
+    >
+      <div *ngIf="bookmarkForm.get('title')?.errors?.['required']">
+        Title is required.
+      </div>
+      <div *ngIf="bookmarkForm.get('title')?.errors?.['minlength']">
+        Title can be maximum 30 characters long.
+      </div>
     </div>
   </div>
 
-  <div class="flex flex-wrap -mx-3 mb-2">
-    <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-      <label
-        class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-        for="grid-category"
+  <!-- URL Input -->
+  <div class="w-full px-3">
+    <label
+      class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+      for="url"
+    >
+      URL
+    </label>
+    <input
+      formControlName="url"
+      required
+      class="form-control appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+      id="url"
+      type="text"
+      placeholder="www.xyz.com"
+    />
+    <div
+      *ngIf="
+        bookmarkForm.get('url')?.invalid &&
+        (bookmarkForm.get('url')?.dirty || bookmarkForm.get('url')?.touched)
+      "
+      class="alert alert-danger"
+    >
+      <div
+        *ngIf="
+          bookmarkForm.get('url')?.invalid &&
+          (bookmarkForm.get('url')?.dirty || bookmarkForm.get('url')?.touched)
+        "
+        class="text-red-500"
       >
-        Category
-      </label>
-      <div class="relative">
-        <select
-          class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-          id="grid-category"
-        >
-          <option>Category A</option>
-          <option>Category B</option>
-          <option>Category C</option>
-        </select>
-        <div
-          class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-        >
-          <svg
-            class="fill-current h-4 w-4"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-            />
-          </svg>
+        <div *ngIf="bookmarkForm.get('url')?.errors?.['required']">
+          URL is required.
+        </div>
+        <div *ngIf="bookmarkForm.get('url')?.errors?.['invalidUrlFormat']">
+          Invalid URL format.
         </div>
       </div>
     </div>
-
   </div>
+
+  <!-- Category Dropdown -->
+  <div class="w-full px-3 mb-6 md:mb-0">
+    <label
+      class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+      for="category"
+    >
+      Category
+    </label>
+    <div class="relative">
+      <select
+        formControlName="category"
+        required
+        class="form-control block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+        id="category"
+      >
+        <option>Category A</option>
+        <option>Category B</option>
+        <option>Category C</option>
+      </select>
+      <div
+        class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
+      >
+        <svg
+          class="fill-current h-4 w-4"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 20 20"
+        >
+          <path
+            d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+          />
+        </svg>
+      </div>
+    </div>
+    <div
+      *ngIf="
+        bookmarkForm.get('category')?.invalid &&
+        (bookmarkForm.get('category')?.dirty ||
+          bookmarkForm.get('category')?.touched)
+      "
+      class="text-red-500"
+    >
+      <div *ngIf="bookmarkForm.get('category')?.errors?.['required']">
+        Category is required.
+      </div>
+    </div>
+  </div>
+  <button
+    type="submit"
+    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+  >
+    Add Bookmark
+  </button>
 </form>
