--- a/src/app/public/components/bookmark-form/bookmark-form.component.html
+++ b/src/app/public/components/bookmark-form/bookmark-form.component.html
@@ -1,12 +1,12 @@
 <form
-  class="w-full max-w-lg flex flex-col gap-6 items-center justify-evenly"
+  class="flex flex-col items-center w-full max-w-lg gap-6 justify-evenly"
   [formGroup]="bookmarkForm"
   (ngSubmit)="onSubmit()"
 >
   <!-- Title Input -->
   <div class="w-full px-3 mb-6 md:mb-0">
     <label
-      class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+      class="block mb-2 text-xs font-bold tracking-wide text-gray-700 uppercase"
       for="title"
     >
       Title
@@ -14,7 +14,7 @@
     <input
       formControlName="title"
       required
-      class="form-control appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+      class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border rounded appearance-none form-control focus:outline-none focus:bg-white"
       id="title"
       type="text"
       placeholder="Javascript tutorial"
@@ -38,7 +38,7 @@
   <!-- URL Input -->
   <div class="w-full px-3">
     <label
-      class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+      class="block mb-2 text-xs font-bold tracking-wide text-gray-700 uppercase"
       for="url"
     >
       URL
@@ -46,7 +46,7 @@
     <input
       formControlName="url"
       required
-      class="form-control appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+      class="block w-full px-4 py-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none form-control focus:outline-none focus:bg-white focus:border-gray-500"
       id="url"
       type="text"
       placeholder="www.xyz.com"
@@ -78,34 +78,64 @@
   <!-- Category Dropdown -->
   <div class="w-full px-3 mb-6 md:mb-0">
     <label
-      class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+      class="block mb-2 text-xs font-bold tracking-wide text-gray-700 uppercase"
       for="category"
     >
       Category
     </label>
-    <div class="relative">
-      <select
-        formControlName="category"
-        required
-        class="form-control block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-        id="category"
-      >
-        <option>Category A</option>
-        <option>Category B</option>
-        <option>Category C</option>
-      </select>
-      <div
-        class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-      >
-        <svg
-          class="fill-current h-4 w-4"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 20 20"
+    <div class="flex items-center justify-between" *ngIf="!showNewCategory">
+      <div class="relative flex-[0.9]">
+        <select
+          formControlName="category"
+          required
+          class="block w-full px-4 py-3 pr-8 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none form-control focus:outline-none focus:bg-white focus:border-gray-500"
+          id="category"
         >
-          <path
-            d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-          />
-        </svg>
+          <option>Category A</option>
+          <option>Category B</option>
+          <option>Category C</option>
+        </select>
+        <div
+          class="absolute inset-y-0 right-0 flex items-center px-2 text-gray-700 pointer-events-none"
+        >
+          <svg
+            class="w-4 h-4 fill-current"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+          >
+            <path
+              d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+            />
+          </svg>
+        </div>
+      </div>
+      <button
+        class="px-3 py-2 text-lg rounded-md text-accent-foreground bg-primary"
+        (click)="toggleCategoryControls()"
+      >
+        +
+      </button>
+    </div>
+    <div *ngIf="showNewCategory">
+      <input
+        formControlName="newCategory"
+        required
+        class="block w-full px-4 py-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none form-control focus:outline-none focus:bg-white focus:border-gray-500"
+        id="newCategory"
+        type="text"
+        placeholder="New category name"
+      />
+      <div
+        *ngIf="
+          bookmarkForm.get('newCategory')?.invalid &&
+          (bookmarkForm.get('newCategory')?.dirty ||
+            bookmarkForm.get('newCategory')?.touched)
+        "
+        class="text-red-500"
+      >
+        <div *ngIf="bookmarkForm.get('newCategory')?.errors?.['required']">
+          New category name is required.
+        </div>
       </div>
     </div>
     <div
