chore: Create reusable card component

--- a/src/app/public/components/bookmark-form/bookmark-form.component.html
+++ b/src/app/public/components/bookmark-form/bookmark-form.component.html
@@ -29,7 +29,7 @@
       <div *ngIf="bookmarkForm.get('title')?.errors?.['required']">
         Title is required.
       </div>
-      <div *ngIf="bookmarkForm.get('title')?.errors?.['minlength']">
+      <div *ngIf="bookmarkForm.get('title')?.errors?.['maxlength']">
         Title can be maximum 30 characters long.
       </div>
     </div>
