--- a/src/app/public/components/bookmark-modal/bookmark-modal.component.html
+++ b/src/app/public/components/bookmark-modal/bookmark-modal.component.html
@@ -1,7 +1,6 @@
 <button class="px-4 py-2 text-white bg-blue-500 rounded" (click)="openModal()">
   Add Bookmark
 </button>
-<app-popup-modal
-  *ngIf="showModal"
-  (closeModalEvent)="closeModal()"
+<app-popup-modal *ngIf="showModal" (closeModalEvent)="closeModal()"
+  ><app-bookmark-form (closeModalEvent)="closeModal()"></app-bookmark-form
 ></app-popup-modal>
