--- a/src/app/public/components/card/card.component.html
+++ b/src/app/public/components/card/card.component.html
@@ -11,7 +11,9 @@
     <ul class="flex flex-col items-center justify-between">
       <li *ngFor="let bookmark of bookmarks">
         <span class="text-3xl font-bold text-gray-900 dark:text-white">
-          <a href={{bookmark.url}} target="_blank">{{ bookmark.title }}</a></span
+          <a href="{{ bookmark.url }}" target="_blank">{{
+            bookmark.title
+          }}</a></span
         >
         <button
           class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
