--- a/src/app/public/components/bookmark-form/bookmark-form.component.html
+++ b/src/app/public/components/bookmark-form/bookmark-form.component.html
@@ -56,7 +56,7 @@
         bookmarkForm.get('url')?.invalid &&
         (bookmarkForm.get('url')?.dirty || bookmarkForm.get('url')?.touched)
       "
-      class="alert alert-danger"
+      class="text-red-500"
     >
       <div
         *ngIf="
@@ -91,10 +91,11 @@
           class="block w-full px-4 py-3 pr-8 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none form-control focus:outline-none focus:bg-white focus:border-gray-500"
           id="category"
         >
-          <option>Category A</option>
-          <option>Category B</option>
-          <option>Category C</option>
+          <option *ngFor="let existingCategory of existingCategories">
+            {{ existingCategory }}
+          </option>
         </select>
+
         <div
           class="absolute inset-y-0 right-0 flex items-center px-2 text-gray-700 pointer-events-none"
         >
