--- a/src/app/public/components/home/home.component.html
+++ b/src/app/public/components/home/home.component.html
@@ -1,14 +1,17 @@
 <div class="flex flex-col items-center justify-center max-w-full mt-4">
-  <div class="flex items-center justify-between gap-6">
+  <div class="flex items-center justify-between gap-6 mb-6">
     <h1 class="text-xl font-bold">Bookmark Manager</h1>
     <app-bookmark-modal></app-bookmark-modal>
   </div>
   <div class="flex flex-wrap items-center justify-between">
     <div class="flex flex-col items-start justify-center gap-6">
-        <div *ngFor="let category of groupedBookmarks | keyvalue">
-            <app-card [category]="category.key" [bookmarks]="category.value"></app-card>
-          </div>
-            <!-- <app-card *ngFor="let category of Object.keys(groupedBookmarks)" [category]="category" [bookmarks]="groupedBookmarks[category]"></app-card> -->
+      <div *ngFor="let category of groupedBookmarks | keyvalue">
+        <app-card
+          [category]="category.key"
+          [bookmarks]="category.value"
+        ></app-card>
+      </div>
     </div>
   </div>
+  <app-bookmark-details [bookmark]="selectedBookmark"></app-bookmark-details>
 </div>
