chore: create deployment build

--- a/src/app/public/components/card/card.component.html
+++ b/src/app/public/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full overflow-y-scroll bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 scrollbar-hide min-w-[350px]"
+  class="w-full overflow-y-scroll bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 scrollbar-hide min-w-[350px] flex-1"
 >
   <div class="mx-10 my-10">
     <h5
